# quantum_unified

./: .gitignore  CHANGELOG.md  COMPILATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  Quantum_unification.py  README.md  ZENODO_METADATA.json  ZENODO_README.md  ZENODO_UPLOAD_CHECKLIST.md  app.jsx  pyproject.toml  requirement.txt  setup.cfg
.github/workflows/: deploy-pages.yml  workflow.yml
analysis/: phase1_universality_report.md  phase2_universality_plan.md  phase3_results_note.md  universality_results.json
archive/phase2/: phase2_plot_cache.pkl
arxiv-bundle/: Makefile  README.md
arxiv-bundle/data/: phase5_alpha_vs_invD.csv  phase5_robustness_eps.csv  phase5_varY_by_D.csv  universality_pooled.csv
arxiv-bundle/paper/: latexmkrc  macros.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  phase4_summary.tex  references.bib  references.bib.bak  sections.tex
arxiv-bundle/quantum_unified/: __init__.py
arxiv-bundle/scripts/: phase1_universality.py  (+2 more)
arxiv_bundle/: README.txt  appendix_theorem.tex  main.tex  phase4_numbers.tex  sections_auto.tex
data/: finite_size_gamma.csv  phase4_alpha_vs_invD.csv  phase4_varY_by_D.csv  phase6_theorem_perD.csv  universality_sweep.csv
paper/: macros.tex  main.aux  main.bbl  main.blg  main.out  references.bib  sections.tex  tables_auto.tex
phase0_proofs/: info_geometry_dimension_2d.py
phase0_tests/: COLLISION_MODEL.py  Collapse_test.py  Quantum_unification_worst_case.py  apply_gate_on_S_last_state.py  beta_vs_dimension.py  four_qubit_experiment.py  information_fidelity_experiment.py  local_undo_optimizer.py  quantum_projection_arrow.py  universality_suite.py
phase3-out/: finite_size_alpha_per_size.csv
phase6-out/: phase6_summary.pkl  phase6_summary.txt
phase7-out/: phase7_summary.pkl  phase7_summary.txt
quantum_unified/: README.md  __init__.py
scripts/: build_paper.ps1  ci_check.sh  ingest_metrics.bak  ingest_metrics.py  make_tables.py  phase2_plot_utils.py  phase6_pull_numbers.py
simulator/: index.html  package-lock.json  package.json  vite.config.js
src/: phase4_asymptotics.py  phase5_design_concentration.py  phase6_fast.py  phase6_theorem_harness.py  phase7_stinespring_2design.py  phase8_diagnostics.py
tools/: build_figures.py
(+34 files in other folders)
