[metadata]
name = quantum-unified
version = 0.1.0
author = Anthony Olevester
author_email = olevester.joram123@gmail.com
description = Core utilities for the curvature–information invariant (Y = sqrt(d_eff-1) * A^2 / I)
long_description = file: quantum_unified/README.md
long_description_content_type = text/markdown
url = https://example.com/quantum-unified
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21
include_package_data = True

[options.packages.find]
include = quantum_unified*

